Fri Oct 11 10:56:59 2002  George Lebl <jirka@5z.com>

	* src/*.c, src/eval.h: put the free_trees extern in the header

	* src/matrixw.[ch], src/matrix.[ch], src/eval.c, src/parseutil.c,
	  src/funclib.c: Add RowsOf and ColumnsOf function which are useful
	  for the for/in loops (or sum/in or prod/in)

	* README: update a tad

Fri Oct 11 10:09:30 2002  George Lebl <jirka@5z.com>

	* src/eval.c: fix do/while/until loops

	* src/lexer.l, src/parse.y, src/eval.c, src/matrixw.[ch],
	  src/matop.[ch]: Make the ' operator the conjugate transpose
	  and add a simple transpose .' operator ala matlab/octave.  Also
	  only set matrix element to a NULL if it truly does equal 0 (integer
	  only)

	* src/eval.[ch], src/funclib.c: Add ExpandMatrix and conj functions.

	* lib/*/*.gel: update for transpose, added ConjugateTranspose
	  function

	* src/eval.c: fix matrix column expansion.

	* src/geniustests.txt: Because matrix expansion now works differently
	  (more sanely), update the tests.  Also add some simple transpose
	  versus conjugate transpose tests

Thu Oct 10 10:31:48 2002  George Lebl <jirka@5z.com>

	* src/eval.c, lib/linear_algebra/linear_algebra.gel: fix matrix
	  expansion and don't expand when not neccessary

	* src/eval.c: don't force replace = by == if we move from a
	  boolean context to a function definition one

	* src/eval.c: attempt to fix broken dowhile/dountil

Wed Oct 09 15:01:09 2002  George Lebl <jirka@5z.com>

	* lib/linear_algebra/*.gel: add a bunch of basic linalg functions,
	  add protects to some, add some help strings and such

Wed Oct 09 14:28:57 2002  George Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: add a few functions

Wed Oct 09 12:42:16 2002  George Lebl <jirka@5z.com>

	* src/funclib.c: use x^0 in polytofunc to allow properly evaluating
	  with matrices

	* src/gnome-genius.c: flush after error display

Wed Oct 09 12:32:45 2002  George Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/inter.c, src/Makefile.am,