@@ -1,5 +1,7 @@
 *	fix matrix exp function and add matrix ln function
 
+*	Fix modular arithmetic to be correct (such as: "expr mod n")
+
 *	matrix powers for rational numbers, and scalar^matrix (as matlab
 	does it)
 
@@ -17,13 +19,12 @@
 
 *	cleanup engine
 
-*	more calculator functions for use in plugins etc
-
 *	mdi like interface, and gel file editting inside genius
-
-*	check all modular arithmetic to be correct (such as: "expr mod n")
-
-*	add interface for using guile inside genius
 
 *	make one line expression output more sane and make it work right
 	for matricies
+
+*	more calculator functions for use in plugins etc
+
+*	add interface for using guile inside genius (or maybe not)
+
